dashboard/dashboard-istio.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: dashboard-gateway
  namespace: default
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 443
      name: https
      protocol: HTTPS
    tls:
      mode: PASSTHROUGH
    hosts:
    - "dashboard.demo.com"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: dashboard
  namespace: default
spec:
  hosts:
  - "dashboard.demo.com"
  gateways:
  - dashboard-gateway
  tls:
    - match:
      - sniHosts: ["dashboard.demo.com"]
    - route:
      - destination:
          host: kubernetes-dashboard.kubernetes-dashboard.svc.cluster.local
          port:
            number: 443
