dashboard/dashboard-virtualservice.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: dashboard-service
  namespace: default
spec:
  hosts:
  - "dashboard.demo.com"
  gateways:
  - dashboard-gateway
  tls:
  - match:
    - port: 443
      sniHosts:
      - dashboard.demo.com
    route:
    - destination:
        host: kubernetes-dashboard.kubernetes-dashboard.svc.cluster.local
        port:
          number: 443
